# WD-Tetrahedralization

./: .gitignore  CMakeLists.txt  README.md
include/: triangulation_utils.h
models/: cube.off  sphere.off
src/: viewer.cpp
tests/: test_main.cpp
